@@ -1,5 +1,6 @@
 24/03/2007 0.2.1
-- es, fr: Added link to the Fedora package pageAdded distro icons (alessiofender)
+- es, fr: Added link to the Fedora package page (alessiofender)
+- es, fr: Added distro icons (alessiofender)
 - README.FPM.en.txt, README.FPM.it.txt, freepopsd.vbs: reorganization of buildfactory mess, now only the upstream supported builds arein the main Makefile. This Makefile includes at the end other Makefilesavailable in subdirs like gentoo/openbsd. All fils relative to distros are intheis relative directory, except the jail building script that should be movedin scripts. (gareuselesinge)
 - hotmail.lua: Get msn working again. (russell822)
 - hotmail.lua: Fix live mail not retreiving messages. (russell822)
@@ -13,7 +14,7 @@
 - housekeeping in buildfactory, INSTALL, README and BUILD
 - moved win32 gnutls to 1.6.1
 - moved win32 openssl to 0.9.7m
-- fixed osx startup script
+- fixed osx startup script (alessiofender, ncocchiaro)
 - fixed soap module declaration
 - fixed win32 uninstall procedure
 4/03/2007 0.2.0
